syntax = "proto3";
import "events/component/request/rpc_mapping.proto";
import "events/component/component_events.proto";

option java_multiple_files = true;
option java_package = "is.yarr.qilletni.grpc.gen.request";

service BoardService {
  rpc Create(BoardCreateEvent) returns (BoardCreateResponse);
  rpc ChangeName(BoardNameChangeEvent) returns (EmptyResponse);
}

message BoardCreateEvent {
  string name = 1;
}

message BoardCreateResponse {
  optional ResponseError error = 1;
  string board_id = 2;
}

message BoardModifyEvent {
  string board_id = 1;
}

message BoardNameChangeEvent {
  BoardModifyEvent modify = 1;
  string name = 2;
}
